fix sidebar visible before login & UI fixes

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -39,3 +39,6 @@ h3 {
   text-decoration: none;
 }
 
+.sidebar-item {
+  width: 100%;
+}
